--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "escape-html": "^1.0.3",
     "express": "~4.16.0",
     "express-jwt": "^5.3.1",
     "http-errors": "~1.6.2",
