--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "debug": "~2.6.9",
     "escape-html": "^1.0.3",
     "express": "~4.16.0",
+    "express-fileupload": "^1.1.4",
     "express-jwt": "^5.3.1",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
     "nodemailer": "^4.6.8",
     "pg-promise": "^8.5.2",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.3"
   }
 }
